--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 ---
+layout: default
+title: Home
 ---
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
-  </body>
-</html>
+<h1></h1>
+<p>Welcome to my website</p>
