tweak(index): add welcoming text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 title: Home
+order: 1
 ---
-
 <h1></h1>
-<p>Welcome to my website</p>
+<p>Welcome to my personal <i>notepad</i> 📝</p>
+
+I like to share my experience, ideas, solutions, challenges I've faced, and other related topics while developing
+projects.
+<br>
+<br>
+Any suggestions or feedback for improving this notepad are always welcome!
